web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test-app
        image: avinashdere99/python:tag
        ports:
        - containerPort: 5000
          name: web-port
        livenessProbe:
          exec:
            command: 
             - /bin/sh
             - c
             - nc -z mongodb 27017
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          exec:
            command: 
             - /bin/sh
             - c
             - nc -z mongodb 27017
          initialDelaySeconds: 60
          periodSeconds: 10
